# paglets

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  CITATION.cff  LICENSE  README.md  USAGE.md  config.json  main.py  mkdocs.yml  paglets.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  paper.yml  publish.yml
agents/: base_agent.py  dataframe_agent.py  load_agent.py  time_agent.py
demos/: __init__.py  clone_workers_demo.py  disk_survey_demo.py  finder_demo.py  itinerary_demo.py  message_patterns_demo.py  mobility_events_demo.py  simple_master_slave_demo.py  start_hello_demo.py
docs/: api-reference.md  examples.md  git-auto-update.md  glossary.md  implementing-paglets.md  index.md  internal-workings.md  usage-ideas.md
docs/assets/javascripts/: diagram-zoom.js  section-nav.js
docs/assets/stylesheets/: code-source.css  diagram-zoom.css  navigation.css
docs/examples/: analysis-jobs.md  compute.md  detached-compute-collector.md  file-grabber.md  index.md  mesh-benchmark.md  mesh-info.md  performance.md  search.md  source-tree-demos.md  system-info.md
docs/operations/: cli.md  configuration.md  deployment-importability.md  host-cli.md  index.md  local-multi-host.md  package-releases.md
docs/project/: status.md
docs/system/: artifacts.md  compute-slots.md  index.md  mesh-info.md  server-info.md  user-info.md
docs/technical/: artifacts.md  configuration.md  core.md  overview.md  patterns.md  persistence.md  remote.md  runtime.md  serialization.md  services.md  tooling.md
examples/: __init__.py  clone_workers_demo.py  disk_survey_demo.py  finder_demo.py  itinerary_demo.py  message_patterns_demo.py  mobility_events_demo.py  simple_master_slave_demo.py  start_hello_demo.py  support.py
paglets/: util.py
papers/paglets-application-note/: .gitignore  Makefile  README.md  paglets-application-note.tex  references.bib
papers/paglets-application-note/data/: manifest.json  mesh_results_0.json  mesh_results_1048576.json  mesh_results_1073741824.json  mesh_results_16777216.json  mesh_results_268435456.json  mesh_results_4194304.json  mesh_results_536870912.json  mesh_results_67108864.json  perf_test.json
papers/paglets-application-note/figures/: mesh_latency.gnuplot  mesh_payload_speed.gnuplot
src/paglets/: __init__.py  admin.py  agent.py  artifacts.py  cli.py  client.py  context_events.py  discovery.py  envelope.py  errors.py  events.py  git_update.py  host.py  itinerary.py  mailbox.py  mesh.py  messages.py  persistency.py  process_runtime.py  proxy.py  references.py  resident.py  resources.py  serde.py  services.py  startup.py  storage.py  transfer.py  transport.py  tui.py
src/paglets/cli/: __init__.py  app.py  artifacts.py  console.py  examples.py  host.py  jobs.py  mesh.py  search.py  system.py
src/paglets/config/: __init__.py  env.py  startup.py
src/paglets/config/defaults/: launch.toml
src/paglets/core/: __init__.py  agent.py  context_events.py  events.py  itinerary.py  messages.py  runtime_values.py  wire.py
src/paglets/defaults/: __init__.py  launch.toml
src/paglets/examples/: __init__.py
src/paglets/examples/analysis_jobs/: __init__.py  agent.py  cli.py  locking.py  workload.py
src/paglets/patterns/: __init__.py  coordination.py  file_mobility.py  notifications.py  operations.py  tasks.py
src/paglets/persistence/: __init__.py  persistency.py  storage.py
src/paglets/remote/: __init__.py  admin.py  client.py  mesh.py  proxy.py  references.py  transfer.py  transport.py
src/paglets/runtime/: __init__.py  binding.py  child_bootstrap.py  child_calls.py  child_endpoint.py  child_facade.py  envelope.py  host.py  http_api.py  inactive_records.py  lifecycle.py  mailbox.py  process_controller.py  process_protocol.py  process_runtime.py  relay.py  resident_services.py  resources.py
src/paglets/serialization/: __init__.py  codec.py  serde.py
src/paglets/services/: __init__.py  contracts.py  resident.py
src/paglets/system/: __init__.py  artifacts_cli.py
src/paglets/tooling/: __init__.py  cli.py  discovery.py  git_update.py
tests/: __init__.py  support.py  test_admin_client.py  test_admin_config.py  test_aglets_concepts.py  test_aglets_extensions.py  test_codec.py  test_compute_example.py  test_discovery.py  test_disk_survey_demo.py  test_durable_deactivation.py  test_git_update.py  test_host_git_update.py  test_http_api.py  test_itinerary_flow.py  test_mesh.py  test_mesh_benchmark.py  test_mesh_info.py  test_mesh_info_cli.py  test_namespace_layout.py  test_paglets_core.py  test_performance.py  test_process_isolation.py  test_runtime_values.py  test_search_example.py  test_serde.py  test_service_contracts.py  test_startup_config.py  test_storage.py  test_system_info.py  test_tui.py
tests/cli/: test_app.py
tests/config/: test_env.py  test_startup_config.py
tests/core/: test_aglets_concepts.py  test_aglets_extensions.py  test_itinerary_flow.py  test_runtime_values.py  test_service_contracts.py
tests/examples/: test_analysis_jobs.py  test_compute_agent_flow.py  test_compute_cli.py  test_compute_example.py  test_compute_math.py  test_compute_scheduling.py  test_disk_survey_demo.py  test_file_grabber.py  test_mesh_benchmark.py  test_mesh_info.py  test_mesh_info_cli.py  test_performance.py  test_search_example.py  test_system_info.py
tests/patterns/: test_coordination.py  test_file_mobility.py  test_notifications.py  test_operations.py  test_tasks.py
tests/remote/: test_admin_client.py  test_admin_config.py  test_client_errors.py  test_mesh.py
tests/runtime/: test_artifacts.py  test_binding.py  test_child_endpoint.py  test_durable_deactivation.py  test_http_api.py  test_http_api_basic.py  test_http_auth.py  test_http_transfer.py  test_process_isolation.py  test_relay_http.py  test_storage.py
tests/system/: test_artifacts_cli.py  test_compute_groups.py  test_compute_groups_cli.py  test_compute_job_base.py  test_compute_slots.py  test_compute_slots_affinity.py  test_compute_slots_cli.py  test_user_info.py
tests/tooling/: test_discovery.py  test_git_update.py  test_host_git_update.py  test_no_public_drains.py
(+43 files in other folders)
