[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paglets"
version = "1.0.0"
description = "A small Python Aglets-inspired mobile object runtime."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "C. Klukas" },
]
keywords = ["agents", "mobile-agents", "distributed-systems", "runtime", "mesh"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
]
dependencies = ["pandas>=2.0", "pathspec>=0.12", "psutil>=5.9", "scikit-learn>=1.4", "setproctitle>=1.3"]

[project.urls]
Homepage = "https://github.com/cklukas/paglets"
Documentation = "https://cklukas.github.io/paglets/"
Repository = "https://github.com/cklukas/paglets"
Issues = "https://github.com/cklukas/paglets/issues"

[project.optional-dependencies]
docs = ["mkdocs>=1.6,<2", "mkdocs-material>=9.5,<10", "mkdocstrings[python]>=0.28,<1"]

[dependency-groups]
dev = ["pre-commit>=4", "pytest>=8", "pytest-cov>=7", "ruff>=0.12", "pyright>=1.1"]

[project.scripts]
paglets-analysis-jobs = "paglets.examples.analysis_jobs.cli:main"
paglets-host = "paglets.tooling.cli:main"
paglets-mesh-benchmark = "paglets.examples.mesh_benchmark.cli:main"
paglets-compute-slots = "paglets.system.compute_slots.cli:main"
paglets-mesh-info = "paglets.system.mesh_info.cli:main"
paglets-perf-test = "paglets.examples.performance.cli:main"
paglets-pi-compute = "paglets.examples.compute.cli:main"
paglets-search = "paglets.examples.search.cli:main"
paglets-sysinfo = "paglets.system.server_info.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paglets"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pyright]
include = ["src/paglets"]
exclude = ["**/__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
# Dynamic wire payloads, import-by-name runtime loading, and host/facade mixins
# intentionally keep a few strict categories muted until the corresponding
# boundaries are fully protocol-typed.
reportMissingTypeStubs = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportPrivateUsage = "none"
reportUnnecessaryIsInstance = "none"
reportDeprecated = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportCallIssue = "none"
reportGeneralTypeIssues = "none"
reportIncompatibleVariableOverride = "none"
reportOptionalSubscript = "none"
reportPossiblyUnboundVariable = "none"
reportReturnType = "none"
reportUnnecessaryComparison = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnknownLambdaType = "none"
